[tool.poetry]
name = "dont-fall-block"
version = "0.1.0"
description = ""
authors = ["Cacapon Project <cacapon.project@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyxel = "^2.3.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
